change domain-config format and extension

--- a/product/carbon-home/conf/identity/domain-config.yaml
+++ b/product/carbon-home/conf/identity/domain-config.yaml
@@ -15,8 +15,9 @@
 ###############################################################################
 domains:
   -
+    id: 1
     name: "PRIMARY"
-    priority: 1
+    order: 1
     uniqueIdResolver:
       type: "JDBCUniqueIdResolver"
       properties:
