--- a/pom.xml
+++ b/pom.xml
@@ -1417,47 +1417,47 @@
     <properties>
 
         <!--Carbon Identity Framework Version-->
-        <carbon.identity.framework.version>5.6.34</carbon.identity.framework.version>
+        <carbon.identity.framework.version>5.6.44-SNAPSHOT</carbon.identity.framework.version>
 
         <!--Identity Repo Versions-->
-        <identity.carbon.auth.saml2.version>5.1.6</identity.carbon.auth.saml2.version>
-        <identity.inbound.auth.saml.version>5.2.6</identity.inbound.auth.saml.version>
-        <identity.inbound.auth.oauth.version>5.2.17</identity.inbound.auth.oauth.version>
+        <identity.carbon.auth.saml2.version>5.1.7-SNAPSHOT</identity.carbon.auth.saml2.version>
+        <identity.inbound.auth.saml.version>5.2.7-SNAPSHOT</identity.inbound.auth.saml.version>
+        <identity.inbound.auth.oauth.version>5.2.21-SNAPSHOT</identity.inbound.auth.oauth.version>
         <identity.inbound.auth.openid.version>5.2.0</identity.inbound.auth.openid.version>
-        <identity.agent.sso.version>5.1.3</identity.agent.sso.version>
-        <identity.inbound.auth.sts.version>5.1.6</identity.inbound.auth.sts.version>
-        <identity.outbound.auth.requestpath.basicauth.version>5.1.3</identity.outbound.auth.requestpath.basicauth.version>
-        <identity.carbon.auth.mutual.ssl.version>5.1.2</identity.carbon.auth.mutual.ssl.version>
-        <identity.user.account.association.version>5.1.2</identity.user.account.association.version>
-        <identity.user.workflow.version>5.1.2</identity.user.workflow.version>
-        <identity.user.ws.version>5.1.4</identity.user.ws.version>
-        <identity.userstore.ldap.version>5.1.2</identity.userstore.ldap.version>
-        <identity.userstore.remote.version>5.1.2</identity.userstore.remote.version>
-        <identity.workflow.impl.bps.version>5.1.3</identity.workflow.impl.bps.version>
-        <identity.carbon.auth.iwa.version>5.1.4</identity.carbon.auth.iwa.version>
-        <identity.workflow.template.multisteps.version>5.1.2</identity.workflow.template.multisteps.version>
-        <identity.outbound.auth.requestpath.oauth.version>5.1.3</identity.outbound.auth.requestpath.oauth.version>
-        <identity.inbound.provisioning.scim.version>5.1.12</identity.inbound.provisioning.scim.version>
-        <identity.tool.samlsso.validator.version>5.1.2</identity.tool.samlsso.validator.version>
-        <identity.data.publisher.authentication.version>5.1.4</identity.data.publisher.authentication.version>
-        <identity.data.publisher.oauth.version>0.1.4</identity.data.publisher.oauth.version>
-        <identity.data.publisher.audit.version>0.1.1</identity.data.publisher.audit.version>
+        <identity.agent.sso.version>5.1.4-SNAPSHOT</identity.agent.sso.version>
+        <identity.inbound.auth.sts.version>5.1.7-SNAPSHOT</identity.inbound.auth.sts.version>
+        <identity.outbound.auth.requestpath.basicauth.version>5.1.4-SNAPSHOT</identity.outbound.auth.requestpath.basicauth.version>
+        <identity.carbon.auth.mutual.ssl.version>5.1.3-SNAPSHOT</identity.carbon.auth.mutual.ssl.version>
+        <identity.user.account.association.version>5.1.3-SNAPSHOT</identity.user.account.association.version>
+        <identity.user.workflow.version>5.1.3-SNAPSHOT</identity.user.workflow.version>
+        <identity.user.ws.version>5.1.5-SNAPSHOT</identity.user.ws.version>
+        <identity.userstore.ldap.version>5.1.3-SNAPSHOT</identity.userstore.ldap.version>
+        <identity.userstore.remote.version>5.1.3-SNAPSHOT</identity.userstore.remote.version>
+        <identity.workflow.impl.bps.version>5.1.4-SNAPSHOT</identity.workflow.impl.bps.version>
+        <identity.carbon.auth.iwa.version>5.1.5-SNAPSHOT</identity.carbon.auth.iwa.version>
+        <identity.workflow.template.multisteps.version>5.1.3-SNAPSHOT</identity.workflow.template.multisteps.version>
+        <identity.outbound.auth.requestpath.oauth.version>5.1.4-SNAPSHOT</identity.outbound.auth.requestpath.oauth.version>
+        <identity.inbound.provisioning.scim.version>5.1.12-SNAPSHOT</identity.inbound.provisioning.scim.version>
+        <identity.tool.samlsso.validator.version>5.1.3-SNAPSHOT</identity.tool.samlsso.validator.version>
+        <identity.data.publisher.authentication.version>5.1.5-SNAPSHOT</identity.data.publisher.authentication.version>
+        <identity.data.publisher.oauth.version>0.1.5-SNAPSHOT</identity.data.publisher.oauth.version>
+        <identity.data.publisher.audit.version>0.1.2-SNAPSHOT</identity.data.publisher.audit.version>
         <!--<identity.carbon.auth.thrift.version>5.5.0-SNAPSHOT</identity.carbon.auth.thrift.version>-->
-        <!--<identity.application.auth.oidc.version>5.1.2-SNAPSHOT</identity.application.auth.oidc.version>-->
-        <identity.governance.version>0.1.20</identity.governance.version>
-        <carbon.identity.auth.version>0.1.12</carbon.identity.auth.version>
-        <identity.event.handler.account.lock.version>1.0.3</identity.event.handler.account.lock.version>
-        <identity.event.handler.notification.version>0.1.4</identity.event.handler.notification.version>
-        <identity.app.authz.xacml.version>0.1.0</identity.app.authz.xacml.version>
+        <!--<identity.application.auth.oidc.version>5.1.2-SNAPSHOT</identit y.application.auth.oidc.version>-->
+        <identity.governance.version>0.1.21-SNAPSHOT</identity.governance.version>
+        <carbon.identity.auth.version>0.1.13-SNAPSHOT</carbon.identity.auth.version>
+        <identity.event.handler.account.lock.version>1.0.4-SNAPSHOT</identity.event.handler.account.lock.version>
+        <identity.event.handler.notification.version>0.1.6-SNAPSHOT</identity.event.handler.notification.version>
+        <identity.app.authz.xacml.version>0.1.1-SNAPSHOT</identity.app.authz.xacml.version>
         <!--<identity.agent.entitlement.proxy.version>5.1.1</identity.agent.entitlement.proxy.version>-->
         <!--<identity.carbon.auth.signedjwt.version>5.1.1</identity.carbon.auth.signedjwt.version>-->
         <!--<identity.userstore.cassandra.version>5.1.1</identity.userstore.cassandra.version>-->
         <!--<identity.agent-entitlement-filter.version>5.1.1</identity.agent-entitlement-filter.version>-->
 
         <!-- Authenticator Properties -->
-        <identity.outbound.auth.oidc.version>5.1.3</identity.outbound.auth.oidc.version>
-        <identity.outbound.auth.passive.sts.version>5.2.0</identity.outbound.auth.passive.sts.version>
-        <identity.outbound.auth.samlsso.version>5.1.4</identity.outbound.auth.samlsso.version>
+        <identity.outbound.auth.oidc.version>5.1.4-SNAPSHOT</identity.outbound.auth.oidc.version>
+        <identity.outbound.auth.passive.sts.version>5.2.1-SNAPSHOT</identity.outbound.auth.passive.sts.version>
+        <identity.outbound.auth.samlsso.version>5.1.5-SNAPSHOT</identity.outbound.auth.samlsso.version>
 
         <!-- Social Authenticator Properties -->
         <social.authenticator.facebook.version>5.1.3</social.authenticator.facebook.version>
@@ -1472,16 +1472,16 @@
         <provisioning.connector.scim.version>5.1.2</provisioning.connector.scim.version>
 
         <!-- Local Authenticator Properties -->
-        <identity.local.auth.basicauth.version>5.2.3</identity.local.auth.basicauth.version>
-        <identity.local.auth.fido.version>5.1.3</identity.local.auth.fido.version>
-        <identity.local.auth.iwa.version>5.2.5</identity.local.auth.iwa.version>
+        <identity.local.auth.basicauth.version>5.2.4-SNAPSHOT</identity.local.auth.basicauth.version>
+        <identity.local.auth.fido.version>5.1.4-SNAPSHOT</identity.local.auth.fido.version>
+        <identity.local.auth.iwa.version>5.2.6-SNAPSHOT</identity.local.auth.iwa.version>
 
         <!--SAML Metadata-->
-        <identity.metadata.saml.version>0.1.3</identity.metadata.saml.version>
+        <identity.metadata.saml.version>0.1.4-SNAPSHOT</identity.metadata.saml.version>
 
         <!-- Deprecated identity repos -->
-        <identity.notification.email.version>5.1.1</identity.notification.email.version>
-        <identity.notification.json.version>5.1.1</identity.notification.json.version>
+        <identity.notification.email.version>5.1.2-SNAPSHOT</identity.notification.email.version>
+        <identity.notification.json.version>5.1.2-SNAPSHOT</identity.notification.json.version>
 
         <!--Identity Repo Versions End-->
 
