--- a/modules/migration/migration-5.2.0_to_5.3.0/wso2-is-migration-client/pom.xml
+++ b/modules/migration/migration-5.2.0_to_5.3.0/wso2-is-migration-client/pom.xml
@@ -71,11 +71,15 @@
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon.identity.framework</groupId>
-            <artifactId>org.wso2.carbon.identity.application.mgt</artifactId>
+            <artifactId>org.wso2.carbon.identity.claim.metadata.mgt</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.identity.governance</groupId>
+            <artifactId>org.wso2.carbon.identity.recovery</artifactId>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon.identity.framework</groupId>
-            <artifactId>org.wso2.carbon.identity.claim.metadata.mgt</artifactId>
+            <artifactId>org.wso2.carbon.identity.mgt</artifactId>
         </dependency>
     </dependencies>
 
