--- a/modules/p2-profile-gen/pom.xml
+++ b/modules/p2-profile-gen/pom.xml
@@ -215,9 +215,9 @@
                                 <featureArtifactDef>
                                     org.wso2.carbon.identity.framework:org.wso2.carbon.claim.mgt.feature:${carbon.identity.framework.version}
                                 </featureArtifactDef>
-                                <featureArtifactDef>
+                                <!--featureArtifactDef>
                                     org.wso2.carbon.identity.inbound.auth.saml2:org.wso2.carbon.identity.sso.saml.feature:${identity.inbound.auth.saml.version}
-                                </featureArtifactDef>
+                                </featureArtifactDef-->
                                 <featureArtifactDef>
                                     org.wso2.carbon.identity.metadata.saml2:org.wso2.carbon.identity.idp.metadata.saml2.server.feature:${identity.metadata.saml.version}
                                 </featureArtifactDef>
@@ -333,9 +333,9 @@
                                 </featureArtifactDef>
 
                                 <!-- SAML Request/Response Validator Toolkit Feature -->
-                                <featureArtifactDef>
+                                <!--featureArtifactDef>
                                     org.wso2.carbon.identity.tool.validator.sso.saml2:org.wso2.carbon.identity.tools.saml.validator.feature:${identity.tool.samlsso.validator.version}
-                                </featureArtifactDef>
+                                </featureArtifactDef-->
                                 <featureArtifactDef>
                                     org.wso2.carbon.identity.metadata.saml2:org.wso2.carbon.identity.idp.metadata.saml2.server.feature:${identity.metadata.saml.version}
                                 </featureArtifactDef>
@@ -609,10 +609,10 @@
                                     <id>org.wso2.carbon.identity.xacml.feature.group</id>
                                     <version>${carbon.identity.framework.version}</version>
                                 </feature>
-                                <feature>
+                                <!--feature>
                                     <id>org.wso2.carbon.identity.sso.saml.feature.group</id>
                                     <version>${identity.inbound.auth.saml.version}</version>
-                                </feature>
+                                </feature-->
                                 <feature>
                                     <id>org.wso2.carbon.identity.idp.metadata.saml2.server.feature.group</id>
                                     <version>${identity.metadata.saml.version}</version>
@@ -755,10 +755,10 @@
                                     <version>${carbon.identity.framework.version}</version>
                                 </feature>
 
-                                <feature>
-                                    <id>org.wso2.carbon.identity.tools.saml.validator.feature.group</id>
-                                    <version>${identity.tool.samlsso.validator.version}</version>
-                                </feature>
+                                <!--<feature>-->
+                                    <!--<id>org.wso2.carbon.identity.tools.saml.validator.feature.group</id>-->
+                                    <!--<version>${identity.tool.samlsso.validator.version}</version>-->
+                                <!--</feature>-->
                                 <feature>
                                     <id>org.wso2.carbon.identity.thrift.authentication.feature.group</id>
                                     <version>${carbon.identity.framework.version}</version>
@@ -1088,10 +1088,10 @@
                                     <id>org.wso2.carbon.identity.xacml.feature.group</id>
                                     <version>${carbon.identity.framework.version}</version>
                                 </feature>
-                                <feature>
+                                <!--feature>
                                     <id>org.wso2.carbon.identity.sso.saml.feature.group</id>
                                     <version>${identity.inbound.auth.saml.version}</version>
-                                </feature>
+                                </feature-->
                                 <feature>
                                     <id>org.wso2.carbon.identity.idp.metadata.saml2.server.feature.group</id>
                                     <version>${identity.metadata.saml.version}</version>
@@ -1234,10 +1234,10 @@
                                     <version>${carbon.identity.framework.version}</version>
                                 </feature>
 
-                                <feature>
-                                    <id>org.wso2.carbon.identity.tools.saml.validator.feature.group</id>
-                                    <version>${identity.tool.samlsso.validator.version}</version>
-                                </feature>
+                                <!--<feature>-->
+                                    <!--<id>org.wso2.carbon.identity.tools.saml.validator.feature.group</id>-->
+                                    <!--<version>${identity.tool.samlsso.validator.version}</version>-->
+                                <!--</feature>-->
                                 <feature>
                                     <id>org.wso2.carbon.identity.thrift.authentication.feature.group</id>
                                     <version>${carbon.identity.framework.version}</version>
@@ -1503,10 +1503,10 @@
                                     <id>org.wso2.carbon.identity.xacml.server.feature.group</id>
                                     <version>${carbon.identity.framework.version}</version>
                                 </feature>
-                                <feature>
+                                <!--feature>
                                     <id>org.wso2.carbon.identity.sso.saml.server.feature.group</id>
                                     <version>${identity.inbound.auth.saml.version}</version>
-                                </feature>
+                                </feature-->
                                 <feature>
                                     <id>org.wso2.carbon.identity.idp.metadata.saml2.server.feature.group</id>
                                     <version>${identity.metadata.saml.version}</version>
@@ -1637,10 +1637,10 @@
                                     <version>${carbon.identity.framework.version}</version>
                                 </feature>
 
-                                <feature>
-                                    <id>org.wso2.carbon.identity.tools.saml.validator.server.feature.group</id>
-                                    <version>${identity.tool.samlsso.validator.version}</version>
-                                </feature>
+                                <!--<feature>-->
+                                    <!--<id>org.wso2.carbon.identity.tools.saml.validator.server.feature.group</id>-->
+                                    <!--<version>${identity.tool.samlsso.validator.version}</version>-->
+                                <!--</feature>-->
                                 <feature>
                                     <id>org.wso2.carbon.identity.thrift.authentication.feature.group</id>
                                     <version>${carbon.identity.framework.version}</version>
