Making inbound-oauth2, inbound-saml2sso and inbound-scim as connectors for IS 5.3.0

--- a/modules/rest-extensions/pom.xml
+++ b/modules/rest-extensions/pom.xml
@@ -23,17 +23,17 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>wso2is-identity-provisioning-connectors</artifactId>
+    <artifactId>wso2is-identity-rest-extensions</artifactId>
     <packaging>pom</packaging>
-    <name>Identity Server : Provisioning Connectors</name>
+    <name>Identity Server : identity-rest-extensions</name>
     <build>
         <plugins>
             <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
-                    <!-- Download SPML Provisioning connector jar from nexus and copy to the provisioningconnectorCopied/jar folder-->
+                    <!-- Download auth.service jar from nexus and copy to the authservice/jar folder-->
                     <execution>
-                        <id>download_spml_provisioning_jar</id>
+                        <id>download_auth_service_jar</id>
                         <phase>compile</phase>
                         <goals>
                             <goal>copy</goal>
@@ -41,22 +41,21 @@
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
-                                    <groupId>org.wso2.carbon.identity.outbound.provisioning.spml</groupId>
-                                    <artifactId>org.wso2.carbon.identity.provisioning.connector.spml
-                                    </artifactId>
-                                    <version>${provisioning.connector.spml.version}</version>
+                                    <groupId>org.wso2.carbon.identity.auth.rest</groupId>
+                                    <artifactId>org.wso2.carbon.identity.auth.service</artifactId>
+                                    <version>${identity.auth.service.version}</version>
                                     <type>jar</type>
                                     <overWrite>true</overWrite>
-                                    <outputDirectory>${basedir}/target/provisioningconnectorCopied/jar
+                                    <outputDirectory>${basedir}/target/authserviceCopied/jar
                                     </outputDirectory>
                                     <includes>**/*.jar</includes>
                                 </artifactItem>
                             </artifactItems>
                         </configuration>
                     </execution>
-                    <!-- Download Google Provisioning connector jar from nexus and copy to the provisioningconnectorCopied/jar folder-->
+                    <!-- Download auth.service jar from nexus and copy to the authservice/jar folder-->
                     <execution>
-                        <id>download_google_provisioning_jar</id>
+                        <id>download_authz_service_jar</id>
                         <phase>compile</phase>
                         <goals>
                             <goal>copy</goal>
@@ -64,23 +63,21 @@
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
-                                    <groupId>org.wso2.carbon.identity.outbound.provisioning.google</groupId>
-                                    <artifactId>
-                                        org.wso2.carbon.identity.provisioning.connector.google
-                                    </artifactId>
-                                    <version>${provisioning.connector.google.version}</version>
+                                    <groupId>org.wso2.carbon.identity.auth.rest</groupId>
+                                    <artifactId>org.wso2.carbon.identity.authz.service</artifactId>
+                                    <version>${identity.auth.service.version}</version>
                                     <type>jar</type>
                                     <overWrite>true</overWrite>
-                                    <outputDirectory>${basedir}/target/provisioningconnectorCopied/jar
+                                    <outputDirectory>${basedir}/target/authserviceCopied/jar
                                     </outputDirectory>
                                     <includes>**/*.jar</includes>
                                 </artifactItem>
                             </artifactItems>
                         </configuration>
                     </execution>
-                    <!-- Download Salesforce Provisioning connector jar from nexus and copy to the provisioningconnectorCopied/jar folder-->
+                    <!-- Download auth.valve jar from nexus and copy to the authservice/jar folder-->
                     <execution>
-                        <id>download_salesforce_provisioning_jar</id>
+                        <id>download_auth_valve_jar</id>
                         <phase>compile</phase>
                         <goals>
                             <goal>copy</goal>
@@ -88,22 +85,21 @@
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
-                                    <groupId>org.wso2.carbon.identity.outbound.provisioning.salesforce</groupId>
-                                    <artifactId>org.wso2.carbon.identity.provisioning.connector.salesforce
-                                    </artifactId>
-                                    <version>${provisioning.connector.salesforce.version}</version>
+                                    <groupId>org.wso2.carbon.identity.auth.rest</groupId>
+                                    <artifactId>org.wso2.carbon.identity.auth.valve</artifactId>
+                                    <version>${identity.auth.service.version}</version>
                                     <type>jar</type>
                                     <overWrite>true</overWrite>
-                                    <outputDirectory>${basedir}/target/provisioningconnectorCopied/jar
+                                    <outputDirectory>${basedir}/target/authserviceCopied/jar
                                     </outputDirectory>
                                     <includes>**/*.jar</includes>
                                 </artifactItem>
                             </artifactItems>
                         </configuration>
                     </execution>
-                    <!-- Download SCIM Provisioning connector jar from nexus and copy to the provisioningconnectorCopied/jar folder-->
+                    <!-- Download authz.valve jar from nexus and copy to the authservice/jar folder-->
                     <execution>
-                        <id>download_scim_provisioning_jar</id>
+                        <id>download_authz_valve_jar</id>
                         <phase>compile</phase>
                         <goals>
                             <goal>copy</goal>
@@ -111,13 +107,12 @@
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
-                                    <groupId>org.wso2.carbon.identity.outbound.provisioning.scim</groupId>
-                                    <artifactId>org.wso2.carbon.identity.provisioning.connector.scim
-                                    </artifactId>
-                                    <version>${provisioning.connector.scim.version}</version>
+                                    <groupId>org.wso2.carbon.identity.auth.rest</groupId>
+                                    <artifactId>org.wso2.carbon.identity.authz.valve</artifactId>
+                                    <version>${identity.auth.service.version}</version>
                                     <type>jar</type>
                                     <overWrite>true</overWrite>
-                                    <outputDirectory>${basedir}/target/provisioningconnectorCopied/jar
+                                    <outputDirectory>${basedir}/target/authserviceCopied/jar
                                     </outputDirectory>
                                     <includes>**/*.jar</includes>
                                 </artifactItem>
