--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/config.yaml
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/config.yaml
@@ -1,10 +1,11 @@
 appName : IAM User Portal
-theme : org.wso2.carbon.uuf.common.theme.default
+theme : org.wso2.carbon.iam.user-portal.theme.default
 menu :
   main :
     Home : {link: "", icon: "fw-home"}
     Users :
-      Self sign up : {link: "users/self-signup", icon: "fw fw-add"}
+      Self sign up : {link: "user/self-signup", icon: "fw fw-add"}
+      Account Settings : {link: "user/account/account-setting", icon: "fw fw-add"}
 errorPages:
   "404": /foundation/error/404
   default: /foundation/error/default
